﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-08-16 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: sorting on column header

2006-08-16 Michal Čihař  <michal@cihar.com>
    * libraries/export/htmlexcel.php: Fix charset header of exported HTML/XLS
      file (bug #1541100).

2006-08-15 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * lang/german: Updated

2006-08-14 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Improve readibility (patch #1539976), thanks to Isaac
      Bennetch - ibennetch.
    * lang/czech: Updated.

2006-08-14 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_structure.php: more complete check before showing
      Relation View
    ### 2.8.2.2 released from MAINT_2_8_2

2006-08-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php: bug #1519799, imagelink error
    * tbl_select.php: feature #1520222, calendar in Search

2006-08-12 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.data.php: bug #1492772, parsing EXTRACT YEAR_MONTH
      (there were sorting errors in the function names array)
      also bug #1534007, STD function not working
    * lang/polish: updates, thanks to Jakub Wilk - ubanus
    * lang/swedish: Update, thanks to Björn T. Hallberg - bjornth.
    * lang/italian: Update, thanks to Rebe - rebeluca.
    * lang/japanese: Update, thanks to Ishigaki Kenichi - tcool.
    * lang/belarusian updates, thanks to Jaska Zedlik

2006-08-11 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php, import.php, libraries/parse_analyze.lib.php:
      bug #1533945, wrong table name in header (SELECT from query window)
    * libraries/auth/config.auth.lib.php: bug #1536112, config not loaded
      (MySQL error 2002 or 2003)

2006-08-11 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css\phpmyadmin.css.php, themes\*:
      updated themes to 2.9 and some minor fixes