@@ -5,6 +5,9 @@ phpMyAdmin - ChangeLog
 $Id$
 $Source$
 
+2006-08-18 Marc Delisle  <lem9@users.sourceforge.net>
+    * libraries/export/pdf.php: do not display BLOBs on PDF export
+
 2006-08-16 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/sqlparser.lib.php: sorting on column header
 
